# heat-gun

./: Cargo.toml  Justfile  README.md  rust-toolchain.toml
exp/blending/: app.js  index.html
exp/skia-mtl/: .gitignore  Cargo.toml  Justfile
exp/skia-mtl/src/: main.rs
src/engine/hg-ctx2d/: Cargo.toml
src/engine/hg-ctx2d/examples/: wgpu.rs
src/engine/hg-ctx2d/src/base/: assets.rs  facade.rs  gfx_bundle.rs  transform.rs
src/engine/hg-ecs/: Cargo.toml
src/engine/hg-ecs/src/: archetype.rs  entity.rs  signal.rs  world.rs
src/engine/hg-engine-client/: Cargo.toml
src/engine/hg-engine-client/src/: lib.rs
src/engine/hg-engine-client/src/base/debug/: draw.rs
src/engine/hg-engine-client/src/base/gfx/: camera.rs  sprite.rs  tile.rs
src/engine/hg-engine-client/src/debug/: draw.rs
src/engine/hg-engine-client/src/gfx/: bus.rs  camera.rs  sprite.rs  tile.rs
src/engine/hg-engine-client/src/utils/: macroquad_ext.rs  mod.rs
src/engine/hg-engine-common/: Cargo.toml
src/engine/hg-engine-common/src/: lib.rs
src/engine/hg-engine-common/src/base/: kinematic.rs  mod.rs
src/engine/hg-engine-common/src/base/mp/: client.rs  mod.rs  server.rs
src/engine/hg-engine-common/src/base/net/backends/: quic_server.rs
src/engine/hg-engine-common/src/base/rpc/: mod.rs  server.rs  shared.rs
src/engine/hg-engine-common/src/base/tile/: layer.rs  mod.rs
src/engine/hg-engine-common/src/base/time/: run_loop.rs
src/engine/hg-engine-common/src/collide/: group.rs  tile.rs
src/engine/hg-engine-common/src/debug/: draw.rs
src/engine/hg-engine-common/src/mp/: client.rs  server.rs
src/engine/hg-engine-common/src/net/: serialize.rs  transport.rs
src/engine/hg-engine-common/src/net/backends/: quic_client.rs  quic_server.rs  quic_shared.rs
src/engine/hg-engine-common/src/rpc/: client.rs  server.rs  shared.rs
src/engine/hg-engine-common/src/tile/: palette.rs
src/engine/hg-engine-common/src/time/: mod.rs
src/engine/hg-engine-common/src/utils/lang/: copy_range.rs  extend_adapters.rs  futures.rs  named_type.rs
src/engine/hg-engine-common/src/utils/math/: circle.rs  hull.rs  physics.rs  scalar.rs
src/engine/hg-engine-server/: Cargo.toml
src/engine/hg-utils/src/: lib.rs
src/engine/hg-utils/src/fmt/: mod.rs
src/engine/hg-utils/src/mem/: mod.rs
src/hg-client/: Cargo.toml
src/hg-client/src/: driver.rs  main.rs
src/hg-client/src/actor/: player.rs
src/hg-client/src/base/: kinematic.rs  mod.rs
src/hg-client/src/base/collide/: bus.rs  mod.rs  tile.rs  update.rs
src/hg-client/src/base/debug/: draw.rs
src/hg-client/src/base/gfx/: bus.rs  camera.rs  sprite.rs  tile.rs
src/hg-client/src/base/net/: manager.rs  transport.rs
src/hg-client/src/base/tile/: layer.rs  map.rs  raycast.rs
src/hg-client/src/game/: bullet.rs  debug.rs  graphics.rs  kinematic.rs  level.rs  mod.rs  player.rs  sprite.rs  tile.rs
src/hg-client/src/game/collide/: bus.rs  tile.rs  update.rs
src/hg-client/src/game/gfx/: bus.rs  camera.rs  mod.rs  sprite.rs  tile.rs
src/hg-client/src/game/tile/: layer.rs  palette.rs  raycast.rs
src/hg-client/src/utils/: macroquad_ext.rs  mod.rs
src/hg-client/src/utils/lang/: extension.rs  mod.rs
src/hg-client/src/utils/math/: aabb.rs  aabb_tree.rs  bvh.rs  circle.rs  copy_range.rs  glam.rs  hull.rs  line.rs  macroquad_ext.rs  mod.rs  physics.rs  scalar.rs
src/hg-common/: Cargo.toml
src/hg-common/src/: lib.rs
src/hg-common/src/base/: kinematic.rs  mod.rs
src/hg-common/src/base/collide/: bus.rs  group.rs  mod.rs  tile.rs
src/hg-common/src/base/debug/: draw.rs
src/hg-common/src/base/mp/: client.rs  server.rs  shared.rs
src/hg-common/src/base/net/: back_pressure.rs  codec.rs  dev_cert.rs  mod.rs  protocol.rs  serialize.rs  transport.rs
src/hg-common/src/base/net/backends/: mod.rs  quic_client.rs  quic_server.rs  quic_shared.rs
src/hg-common/src/base/rpc/: client.rs  groups.rs  mod.rs  server.rs  shared.rs
src/hg-common/src/base/tile/: map.rs  raycast.rs
src/hg-common/src/game/: player.rs
src/hg-common/src/utils/lang/: error.rs  extend_adapters.rs  field.rs  mod.rs  nameable_guard.rs  steal.rs
src/hg-common/src/utils/math/: aabb.rs  color.rs  glam.rs  line.rs  mod.rs  physics.rs
src/hg-ctx2d/: Cargo.toml
src/hg-ctx2d/examples/: wgpu.rs
src/hg-ctx2d/src/: api.rs  assets.rs  facade.rs  lib.rs  misc.rs
src/hg-ctx2d/src/base/: assets.rs  buffer.rs  depth.rs  facade.rs  gfx_bundle.rs  mod.rs  pipelines.rs  raw_context.rs  stream.rs  transform.rs
src/hg-ctx2d/src/brush/: rect.rs
src/hg-ctx2d/src/shaders/: solid_rect.wgsl
src/hg-ctx2d/src/wgpu/: assets.rs  context.rs  instances.rs  mod.rs  quad.rs  utils.rs
src/hg-ctx2d/src/wgpu/shaders/: solid.wgsl
src/hg-ecs/: Cargo.toml
src/hg-ecs/src/: archetype.rs  component.rs  entity.rs  lib.rs  obj.rs  object.rs  query.rs  signal.rs  world.rs
src/hg-server/: Cargo.toml
src/hg-server/src/: driver.rs  main.rs
src/hg-server/src/base/net/: manager.rs  mod.rs  transport.rs
src/hg-server/src/game/: player.rs
src/hg-server/src/game/player/: controller.rs  mod.rs  peer.rs  session.rs
src/hg-utils/: Cargo.toml
src/hg-utils/src/: lib.rs
src/hg-utils/src/fmt/: closure.rs
src/hg-utils/src/hash/: alias.rs
src/hg-utils/src/iter/: merge.rs
src/hg-utils/src/macros/: mod.rs
src/hg-utils/src/mem/: map_arc.rs  mod.rs  shared_box.rs
