[package]
name = "skia-mtl"
version = "0.1.0"
edition = "2021"

[dependencies]
cocoa = "0.26.0"
core-graphics-types = "0.1.1"
fastrand = "2.3.0"
foreign-types-shared = "0.3.1"
metal-rs = { package = "metal", version = "0.31.0" }
objc = "0.2.7"
raw-window-handle = "0.6.0"
skia-safe = { version = "0.82.0", features = ["metal"] }
winit = "0.30.2"
