[package]
name = "hg-common"
version = "0.1.0"
edition = "2021"

[dependencies]
cbit = "0.1.0"
derive-where = "1.2.7"
fastrand = "2.3.0"
glam = "0.27.0"
hg-ecs = { version = "0.1.0", path = "../hg-ecs" }
hg-utils = { version = "0.1.0", path = "../hg-utils" }
scopeguard = "1.2.0"
smallvec = "1.13.2"
thunderdome = "0.6.1"
