[package]
name = "hg-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
cbit = "0.1.0"
derive-where = "1.2.7"
directories-next = "2.0.0"
fastrand = "2.3.0"
glam = "0.27.0"
hg-ecs = { version = "0.1.0", path = "../hg-ecs" }
hg-utils = { version = "0.1.0", path = "../hg-utils" }
postcard = { version = "1.1.1", features = ["use-std"] }
rcgen = "0.13.2"
rustls = "0.23.22"
scopeguard = "1.2.0"
serde = { version = "1.0.217", features = ["derive"] }
smallvec = "1.13.2"
thunderdome = "0.6.1"
tokio = "1.43.0"
tracing = "0.1.41"
