[package]
name = "hg-ctx2d"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.22.0", features = ["min_const_generics"] }
crevice = { version = "0.18.0", features = ["glam"] }
derive-where = "1.2.7"
glam = "0.30.0"
hg-utils = { version = "0.1.0", path = "../hg-utils" }
thunderdome = "0.6.1"
wgpu = { version = "24.0.1", default-features = false, features = ["wgsl"] }

[dev-dependencies]
anyhow = "1.0.97"
futures = "0.3.31"
winit = "0.30.9"
wgpu = { version = "24.0.1", default-features = true }
