[package]
name = "hg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
hg-common = { version = "0.1.0", path = "../hg-common" }
hg-ecs = { version = "0.1.0", path = "../hg-ecs" }
hg-utils = { version = "0.1.0", path = "../hg-utils" }
quinn = { version = "0.11.6", features = ["rustls"] }
rustls = "0.23.22"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
