[package]
name = "hg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytes = "1.10.0"
cbit = "0.1.0"
futures = "0.3.31"
hg-common = { version = "0.1.0", path = "../hg-common" }
hg-ecs = { version = "0.1.0", path = "../hg-ecs" }
hg-utils = { version = "0.1.0", path = "../hg-utils" }
quinn = { version = "0.11.6", features = ["futures-io", "rustls"] }
rustls = "0.23.22"
serde = "1.0.217"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
