[package]
name = "hg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytes = "1.10.0"
cbit = "0.1.0"
fastrand = "2.3.0"
futures = "0.3.31"
glam = { version = "0.27.0", features = ["serde"] }
quinn = { version = "0.11.6", features = ["futures-io", "rustls"] }
rustls = "0.23.22"
serde = "1.0.217"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

hg-common.workspace = true
hg-ecs.workspace = true
hg-engine-common.workspace = true
hg-engine-server.workspace = true
hg-utils.workspace = true
